<project xmlns = "http://maven.apache.org/POM/4.0.0" xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.beanmaker</groupId>
    <artifactId>beanmaker2</artifactId>
    <version>2.4-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>BeanMaker V2</name>
    <description>
        BeanMaker Framework Version 2
    </description>
    <url>https://github.com/cpythoud/beanmaker-v2</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit/</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>cpythoud</id>
            <name>Christophe Pythoud</name>
            <organization>ABCIS</organization>
            <organizationUrl>https://github.com/abcis-ch</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git://github.com/cpythoud/beanmaker-v2.git</connection>
        <developerConnection>scm:git://github.com/cpythoud/beanmaker-v2.git</developerConnection>
        <url>https://github.com/cpythoud/beanmaker-v2</url>
    </scm>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <version.prefix/>
        <version.major>2</version.major>
        <version.minor>4</version.minor>
        <version.patch>0</version.patch>
        <version.postfix>SNAPSHOT</version.postfix>
    </properties>

    <distributionManagement>
        <repository>
            <id>beanmaker-releases</id>
            <name>Beanmaker Releases</name>
            <url>https://repository.beanmaker.org/releases</url>
        </repository>
        <snapshotRepository>
            <id>beanmaker-snapshots</id>
            <name>Beanmaker Snapshots</name>
            <url>https://repository.beanmaker.org/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <modules>
        <module>beanmaker2-codegen</module>
        <module>beanmaker2-runtime</module>
        <module>beanmaker2-util</module>
        <module>beanmaker2-console</module>
        <module>beanmaker2-email</module>
        <module>beanmaker2-email-smtp</module>
        <module>beanmaker2-database-sql</module>
        <module>beanmaker2-codegen-java</module>
        <module>beanmaker2-codegen-html</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>6.1.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.beanmaker</groupId>
                <artifactId>beanmaker2-util</artifactId>
                <version>2.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.beanmaker</groupId>
                <artifactId>beanmaker2-email</artifactId>
                <version>2.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.beanmaker</groupId>
                <artifactId>beanmaker2-database-sql</artifactId>
                <version>2.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.beanmaker</groupId>
                <artifactId>beanmaker2-codegen-java</artifactId>
                <version>2.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.beanmaker</groupId>
                <artifactId>beanmaker2-codegen-html</artifactId>
                <version>2.4-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>javax</groupId>
                <artifactId>javaee-web-api</artifactId>
                <version>8.0.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>commons-fileupload</groupId>
                <artifactId>commons-fileupload</artifactId>
                <version>1.5</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.22.0</version>
            </dependency>
            <dependency>
                <groupId>rodeo.password</groupId>
                <artifactId>password-rodeo</artifactId>
                <version>1.0.1</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>4.7.7</version>
            </dependency>
            <dependency>
                <groupId>org.fusesource.jansi</groupId>
                <artifactId>jansi</artifactId>
                <version>2.4.3</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli-jansi-graalvm</artifactId>
                <version>1.2.0</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>1.14.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-email</artifactId>
                <version>1.5</version>
            </dependency>
            <dependency>
                <groupId>javax.mail</groupId>
                <artifactId>javax.mail-api</artifactId>
                <version>1.5.6</version>
            </dependency>
            <dependency>
                <groupId>org.apache.tika</groupId>
                <artifactId>tika-core</artifactId>
                <version>3.3.0</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>2.0.18</version>
            </dependency>
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>20260522</version>
            </dependency>
            <dependency>
                <groupId>tools.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>3.1.3</version>
            </dependency>
            <dependency>
                <groupId>tools.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>3.1.3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.22.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.9.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.4.0</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.12.0</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>3.2.8</version>
                    <executions>
                        <execution>
                            <id>sign-artifacts</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>sign</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.6.3</version>
                    <executions>
                        <execution>
                            <id>enforce-basics</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <failFast>true</failFast>
                                <rules>
                                    <requireMavenVersion>
                                        <version>[3.9.0,)</version>
                                    </requireMavenVersion>

                                    <requireJavaVersion>
                                        <version>[17,)</version>
                                    </requireJavaVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.21.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
